<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">

    <!-- List of the view commands -->
    <LinearLayout
        android:layout_weight="35"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="Comandos de Voz"
            android:layout_marginTop="@dimen/vertical_small_separation"
            android:layout_marginLeft="@dimen/vertical_small_separation"
            android:layout_marginBottom="@dimen/vertical_small_separation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_height="1dp"
            android:layout_width="match_parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/commandList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>


    <!-- Container for the buttons of the interface -->
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="65"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="top"
            android:layout_marginTop="30dp">

            <!-- Reference view for the relative views -->
            <Button
                android:id="@+id/view_cross_center"
                android:layout_width="@dimen/clickable_size_large"
                android:layout_height="@dimen/clickable_size_large"
                android:text="@string/stop"
                android:textColor="@color/colorPrimary"
                android:background="?selectableItemBackground"
                android:layout_centerInParent="true" />

            <!-- Views for each of the different cross buttons -->
            <ImageButton
                android:id="@+id/bttn_cross_right"
                android:layout_width="@dimen/clickable_size_large"
                android:layout_height="@dimen/clickable_size_large"
                android:layout_alignBottom="@id/view_cross_center"
                android:layout_toEndOf="@id/view_cross_center"
                android:layout_toRightOf="@id/view_cross_center"
                android:background="?selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_right"/>

            <ImageButton
                android:id="@+id/bttn_cross_left"
                android:layout_width="@dimen/clickable_size_large"
                android:layout_height="@dimen/clickable_size_large"
                android:layout_alignBottom="@id/view_cross_center"
                android:layout_toLeftOf="@id/view_cross_center"
                android:layout_toStartOf="@id/view_cross_center"
                android:background="?selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_left"/>

            <ImageButton
                android:id="@+id/bttn_cross_bottom"
                android:layout_width="@dimen/clickable_size_large"
                android:layout_height="@dimen/clickable_size_large"
                android:layout_below="@id/view_cross_center"
                android:layout_centerHorizontal="true"
                android:background="?selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_down" />

            <ImageButton
                android:id="@+id/bttn_cross_top"
                android:layout_width="@dimen/clickable_size_large"
                android:layout_height="@dimen/clickable_size_large"
                android:layout_above="@id/view_cross_center"
                android:layout_centerHorizontal="true"
                android:background="?selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_up" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <ImageButton
                android:id="@+id/bttn_trigger_microphone"
                android:layout_width="@dimen/control_main_button_size"
                android:layout_height="@dimen/control_main_button_size"
                android:background="@drawable/blue_button_bg"
                android:scaleType="centerInside"
                android:contentDescription="@null"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/ic_mic_white_48dp"/>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bttn_a"
                    android:layout_width="@dimen/control_secondary_button_size"
                    android:layout_height="@dimen/control_secondary_button_size"
                    android:background="@drawable/blue_button_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/button_a"
                    android:layout_marginRight="30dp"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:id="@+id/bttn_b"
                    android:layout_width="@dimen/control_secondary_button_size"
                    android:layout_height="@dimen/control_secondary_button_size"
                    android:background="@drawable/blue_button_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/button_b"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toLeftOf="@id/bttn_a"/>

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>
</LinearLayout>